force-app/main/default/objects/AuthorizeNet__c/AuthorizeNet__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AuthorizeNet</label>
</CustomObject>