force-app/main/default/objects/AuthorizeNet__c/fields/Api_Login_ID__c.field-meta.xml
<CustomField>
    <fullName>Api_Login_ID__c</fullName>
    <label>Api_Login_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>