force-app/main/default/objects/AuthorizeNet__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <label>Endpoint_URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>