force-app/main/default/objects/AuthorizeNet__c/fields/Transaction_Key__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Key__c</fullName>
    <label>Transaction_Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>